--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "express-session": "^1.17.3",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
+    "memorystore": "^1.6.7",
     "mysql2": "^3.6.0",
+    "process": "^0.11.10",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
