--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
+    "memorystore": "^1.6.7",
     "mysql2": "^3.6.0",
+    "process": "^0.11.10",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
@@ -16,7 +22,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
